# HateSpeechDetection_ver2

./: .coverage  .gitignore  IFT_APPROACH_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  PROMPT_VALIDATION_FRAMEWORK_ARCHITECTURE.md  README.md  TRAINING_EVALUATION_DATASET_NOTE.md  UNIFICATION_GUIDE.md  pyproject.toml  requirements.txt  run_tests.py  thesis_data_preparation_section_enhanced.md
data_collection/: data_collection_README.md  hatexplain_data_presence_validator.py  hatexplain_downloader.py  toxigen_data_presence_validator.py  toxigen_downloader.py
data_preparation/: UNIFICATION_APPROACH.md  data_preparation_README.md  data_preparation_hatexplain.py  data_preparation_toxigen.py  data_unification.py  unification_summary_README.md
eda/: clean_notebook_unicode.py  hatexplain_eda.ipynb  toxigen_eda.ipynb  unified_dataset_eda.ipynb  unified_dataset_eda.ipynb.backup  unified_dataset_eda.py
finetuning/: A100_SSH_TRAINING_GUIDE.md  README.md  VALIDATION_GUIDE.md  ft_model_selection_README.md  requirements.txt
prompt_engineering/: DEBUG.md  README.md  STRATEGY_TEST_RESULTS.md  YAML_MIGRATION_SUMMARY.md  __init__.py  azureai_mi_connector_wrapper.py  dataset_sampler.py  evaluation_metrics_calc.py  model_connection.yaml  persistence_helper.py  prompt_runner.py  prompts_validator.py  strategy_templates_loader.py  test_yaml_config.py  unified_dataset_loader.py
tests/: test_data_unification.py  test_hatexplain_data_presence.py  test_hatexplain_downloader.py  test_toxigen_data_preparation.py  test_toxigen_data_presence.py  test_toxigen_downloader.py
(+400 files in other folders)
